# micropython-stubs

./: all_modules.json
docs/: 20_using.md  22_vscode.md  26_pylint.md  28_mypy.md  50_legacy.md  firmware_flat.md  firmware_grp.md
publish/micropython-v1_22_2-esp32-esp32_generic-stubs/: _espnow.pyi
publish/micropython-v1_22_2-esp32-esp32_generic_s3-stubs/: _espnow.pyi
publish/micropython-v1_22_2-esp32-stubs/: espnow.pyi
publish/micropython-v1_22_2-esp8266-stubs/: _espnow.pyi
publish/micropython-v1_23_0-esp32-esp32_generic-stubs/: pyproject.toml
publish/micropython-v1_23_0-esp32-esp32_generic_c3-stubs/: pyproject.toml
publish/micropython-v1_23_0-esp32-esp32_generic_s3-stubs/: pyproject.toml
publish/micropython-v1_23_0-esp32-stubs/: pyproject.toml
publish/micropython-v1_23_0-esp8266-esp8266_generic-stubs/: pyproject.toml
publish/micropython-v1_23_0-esp8266-stubs/: pyproject.toml
publish/micropython-v1_23_0-rp2-rpi_pico-stubs/: pyproject.toml
publish/micropython-v1_23_0-rp2-rpi_pico_w-stubs/: pyproject.toml
publish/micropython-v1_23_0-rp2-stubs/: pyproject.toml
publish/micropython-v1_23_0-samd-seeed_wio_terminal-stubs/: pyproject.toml
publish/micropython-v1_23_0-samd-stubs/: pyproject.toml
publish/micropython-v1_23_0-stm32-pybv11-stubs/: pyproject.toml
publish/micropython-v1_23_0-stm32-stubs/: pyproject.toml
publish/micropython-v1_24_0_preview-esp32-esp32_generic-stubs/: math.pyi  pyproject.toml  umachine.pyi
publish/micropython-v1_24_0_preview-esp32-esp32_generic_c3-stubs/: espnow.pyi  machine.pyi  math.pyi  pyproject.toml  umachine.pyi
publish/micropython-v1_24_0_preview-esp32-esp32_generic_s3-stubs/: _espnow.pyi  espnow.pyi  machine.pyi  network.pyi  pyproject.toml  umachine.pyi
publish/micropython-v1_24_0_preview-esp32-stubs/: doc_stubs.json  machine.pyi  neopixel.pyi  pyproject.toml
publish/micropython-v1_24_0_preview-esp8266-esp8266_generic-stubs/: machine.pyi  pyproject.toml  umachine.pyi
publish/micropython-v1_24_0_preview-esp8266-stubs/: doc_stubs.json  pyproject.toml  umachine.pyi
publish/micropython-v1_24_0_preview-rp2-rpi_pico-stubs/: math.pyi  pyproject.toml  umachine.pyi
publish/micropython-v1_24_0_preview-rp2-rpi_pico_w-stubs/: machine.pyi  network.pyi  pyproject.toml  umachine.pyi
publish/micropython-v1_24_0_preview-rp2-stubs/: machine.pyi  neopixel.pyi  pyproject.toml
publish/micropython-v1_24_0_preview-samd-seeed_wio_terminal-stubs/: doc_stubs.json  pyproject.toml
publish/micropython-v1_24_0_preview-samd-stubs/: doc_stubs.json  machine.pyi  math.pyi  pyproject.toml  umachine.pyi
publish/micropython-v1_24_0_preview-stm32-pybv11-stubs/: machine.pyi  math.pyi  pyproject.toml
publish/micropython-v1_24_0_preview-stm32-stubs/: pyproject.toml
publish/micropython-v1_24_0_preview-unix-stubs/: README.md  _thread.pyi  btree.pyi  machine.pyi  pyproject.toml  ucollections.pyi  uio.pyi  usocket.pyi  usys.pyi
publish/micropython-v1_24_0_preview-webassembly-stubs/: README.md  framebuf.pyi  json.pyi  platform.pyi  pyproject.toml  random.pyi  uarray.pyi  uerrno.pyi
publish/micropython-v1_24_0_preview-windows-stubs/: README.md  deflate.pyi  io.py  math.pyi  pyproject.toml  ucollections.py  uerrno.pyi  umachine.pyi  uos.pyi  urandom.pyi  usys.pyi
publish/micropython-v1_25_0_preview-esp32-esp32_generic-stubs/: README.md  array.pyi  cryptolib.pyi  doc_stubs.json  espnow.pyi  framebuf.pyi  heapq.pyi  io.pyi  network.pyi  pyproject.toml  socket.pyi  sys.pyi  uarray.pyi  ubinascii.pyi  ubluetooth.pyi  ucollections.pyi  uheapq.pyi  umachine.pyi  uos.pyi  urandom.pyi  uselect.pyi  usys.pyi
publish/micropython-v1_25_0_preview-esp32-esp32_generic_c3-stubs/: README.md  _espnow.pyi  binascii.pyi  bluetooth.pyi  doc_stubs.json  errno.pyi  esp32.pyi  espnow.pyi  framebuf.pyi  gc.pyi  heapq.pyi  io.pyi  machine.pyi  math.pyi  network.pyi  os.pyi  pyproject.toml  random.pyi  socket.pyi  struct.pyi  (+11 more)
(+2472 files in other folders)
