[tool.poetry]
name = "micropython-webassembly-stubs"
version = "1.24.0a286"
description = "MicroPython stubs"
authors = [
    "josverl <josverl@users.noreply.github.com>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/josverl/micropython-stubs#micropython-stubs"
documentation = "https://micropython-stubs.readthedocs.io/"
exclude = [
    "*.ps1",
    "*.py",
    "**/__pycache__",
    "**/dist",
]
include = [
    "**/*.py",
    "**/*.pyi",
]
repository = "https://github.com/josverl/micropython-stubs"
classifiers = [
    "Typing :: Stubs Only",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Operating System :: OS Independent",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Testing",
    "Natural Language :: English",
]
packages = [
    { include = "__builtins__.pyi" },
    { include = "_asyncio.pyi" },
    { include = "abc.pyi" },
    { include = "array.pyi" },
    { include = "asyncio/__init__.pyi" },
    { include = "asyncio/core.pyi" },
    { include = "asyncio/event.pyi" },
    { include = "asyncio/funcs.pyi" },
    { include = "asyncio/lock.pyi" },
    { include = "base64.pyi" },
    { include = "binascii.pyi" },
    { include = "cmath.pyi" },
    { include = "collections/__init__.pyi" },
    { include = "collections/defaultdict.pyi" },
    { include = "copy.pyi" },
    { include = "datetime.pyi" },
    { include = "deflate.pyi" },
    { include = "errno.pyi" },
    { include = "fnmatch.pyi" },
    { include = "framebuf.pyi" },
    { include = "functools.pyi" },
    { include = "gc.pyi" },
    { include = "gzip.pyi" },
    { include = "hashlib.pyi" },
    { include = "heapq.pyi" },
    { include = "hmac.pyi" },
    { include = "html/__init__.pyi" },
    { include = "inspect.pyi" },
    { include = "io.pyi" },
    { include = "itertools.pyi" },
    { include = "json.pyi" },
    { include = "locale.pyi" },
    { include = "logging.pyi" },
    { include = "math.pyi" },
    { include = "micropython.pyi" },
    { include = "operator.pyi" },
    { include = "os/__init__.pyi" },
    { include = "os/path.pyi" },
    { include = "os.pyi" },
    { include = "pathlib.pyi" },
    { include = "platform.pyi" },
    { include = "random.pyi" },
    { include = "select.pyi" },
    { include = "stat.pyi" },
    { include = "string.pyi" },
    { include = "struct.pyi" },
    { include = "sys.pyi" },
    { include = "tarfile/__init__.pyi" },
    { include = "tarfile/write.pyi" },
    { include = "time.pyi" },
    { include = "types.pyi" },
    { include = "uarray.pyi" },
    { include = "ubinascii.pyi" },
    { include = "ucollections.pyi" },
    { include = "uctypes.pyi" },
    { include = "uerrno.pyi" },
    { include = "uhashlib.pyi" },
    { include = "uheapq.pyi" },
    { include = "uio.pyi" },
    { include = "ujson.pyi" },
    { include = "unittest/__init__.pyi" },
    { include = "uos.pyi" },
    { include = "uplatform.pyi" },
    { include = "urandom.pyi" },
    { include = "ure.pyi" },
    { include = "uselect.pyi" },
    { include = "ustruct.pyi" },
    { include = "usys.pyi" },
    { include = "utime.pyi" },
    { include = "uu.pyi" },
    { include = "zlib.pyi" },
]

[tool.poetry.dependencies]
python = "^3.8"
micropython-stdlib-stubs = ">=1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
